--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "有钱记账APP",
+    "name" : "记账",
     "appid" : "__UNI__3CF9076",
-    "description" : "",
+    "description" : "记账，不只是记录",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
@@ -17,10 +17,12 @@
         "distribute" : {
             "android" : {
                 "permissions" : [],
-                "autoSdkPermissions" : true
+                "autoSdkPermissions" : true,
+                "abiFilters" : [ "arm64-v8a", "x86" ]
             },
             "ios" : {
-                "idfa" : false
+                "idfa" : false,
+                "dSYMs" : false
             },
             "sdkConfigs" : {
                 "ad" : {}
@@ -59,7 +61,8 @@
             },
             "splashscreen" : {
                 "androidStyle" : "common",
-                "iosStyle" : "common"
+                "iosStyle" : "common",
+                "useOriginalMsgbox" : true
             }
         }
     },
