--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
             "android" : {
                 "permissions" : [],
                 "autoSdkPermissions" : true,
-                "abiFilters" : [ "arm64-v8a", "x86" ]
+                "abiFilters" : [ "arm64-v8a" ]
             },
             "ios" : {
                 "idfa" : false,
