--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "随手记",
+    "name" : "期简随手记",
     "appid" : "__UNI__3CF9076",
     "description" : "记账，不只是记录",
     "versionName" : "1.0.22",
