--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name" : "期简随手记",
+    "name" : "随手记",
     "appid" : "__UNI__3CF9076",
     "description" : "记账，不只是记录",
-    "versionName" : "1.0.22",
-    "versionCode" : 122,
+    "versionName" : "1.0.23",
+    "versionCode" : 123,
     "transformPx" : false,
     "app-plus" : {
         "usingComponents" : true,
