--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /.idea/
 /.hbuilderx/
 /node_modules/
+/uview-ui/node_modules/
+package-lock.json
+npm-debug.log
+.DS_Store
+/uview-ui/package-lock.json
+jizhang.keystore
