--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name" : "随手记",
+    "name" : "极简随手记",
     "appid" : "__UNI__3CF9076",
     "description" : "记账，不只是记录",
-    "versionName" : "1.0.25",
-    "versionCode" : 125,
+    "versionName" : "1.0.27",
+    "versionCode" : 127,
     "transformPx" : false,
     "app-plus" : {
         "usingComponents" : true,
