--- a/manifest.json
+++ b/manifest.json
@@ -105,5 +105,6 @@
         }
     },
     "vueVersion" : "2",
-    "locale" : "zh-Hans"
+    "locale" : "zh-Hans",
+    "fallbackLocale" : "zh-Hans"
 }
