--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "极简随手记",
     "appid" : "__UNI__3CF9076",
-    "description" : "记账，不只是记录",
+    "description" : "记账，不只是记录，更是一种生活态度",
     "versionName" : "1.0.37",
     "versionCode" : 137,
     "transformPx" : false,
