--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name" : "极简随手记",
     "appid" : "__UNI__3CF9076",
     "description" : "记账，不只是记录，更是一种生活态度",
-    "versionName" : "1.0.38",
-    "versionCode" : 138,
+    "versionName" : "1.0.39",
+    "versionCode" : 139,
     "transformPx" : false,
     "app-plus" : {
         "usingComponents" : true,
@@ -20,7 +20,8 @@
             "android" : {
                 "permissions" : [],
                 "autoSdkPermissions" : true,
-                "abiFilters" : [ "arm64-v8a" ]
+                "abiFilters" : [ "arm64-v8a" ],
+                "minSdkVersion" : 21
             },
             "ios" : {
                 "idfa" : false,
