--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name" : "极简随手记",
+    "name" : "随手记",
     "appid" : "__UNI__3CF9076",
     "description" : "记账，不只是记录，更是一种生活态度",
-    "versionName" : "1.0.43",
-    "versionCode" : 143,
+    "versionName" : "1.0.44",
+    "versionCode" : 144,
     "transformPx" : false,
     "app-plus" : {
         "usingComponents" : true,
