--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name" : "随手记",
     "appid" : "__UNI__3CF9076",
     "description" : "记账，不只是记录，更是一种生活态度",
-    "versionName" : "1.0.46",
-    "versionCode" : 146,
+    "versionName" : "1.0.47",
+    "versionCode" : 147,
     "transformPx" : false,
     "app-plus" : {
         "usingComponents" : true,
@@ -78,7 +78,7 @@
     "quickapp" : {},
     "mp-weixin" : {
         "usingComponents" : true,
-        "appid" : "wxa2dacb26cf397fff",
+        "appid" : "wx7b32a9e7026048d0",
         "setting" : {
             "urlCheck" : true,
             "minified" : true,
