员工管理插件
Signed-off-by: 琅玡-琪拉 <1076963452@qq.com>

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name" : "极简随手记",
+    "name" : "随手记",
     "appid" : "__UNI__3CF9076",
     "description" : "记账，不只是记录，更是一种生活态度",
-    "versionName" : "1.0.48",
-    "versionCode" : 148,
+    "versionName" : "1.0.50",
+    "versionCode" : 150,
     "transformPx" : false,
     "app-plus" : {
         "usingComponents" : true,
@@ -100,7 +100,7 @@
         }
     },
     "mp-toutiao" : {
-        "appid" : "",
+        "appid" : "tt9b75edc8047e0df101",
         "setting" : {
             "minified" : true,
             "urlCheck" : false,
@@ -117,5 +117,6 @@
                 "enable" : true
             }
         }
-    }
+    },
+    "sassImplementationName" : "node-sass"
 }
